// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card 1 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  >
    <h4
      className="card-title"
    >
      title 1
    </h4>
    <p
      className="card-text"
    >
      text 1
    </p>
  </div>
</div>
`;

exports[`Card 2 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  >
    <h4
      className="card-title"
    >
      title 2
    </h4>
    <p
      className="card-text"
    >
      text 2
    </p>
  </div>
</div>
`;
